# ai-sales-assistant

./: .dockerignore  .env.example  .env.ollama.example  .gitattributes  .gitignore  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: history.py  openai_client.py  orchestrator.py  pricing.py  prompts.py  types.py
app/api/: deps.py  schemas.py
app/api/routers/: automation.py  conversations.py  health.py
app/core/: config.py  logging.py  middleware.py  rate_limit.py  security.py
app/db/: models.py  repositories.py  session.py
app/guardrails/: moderation.py  pii.py  prompt_injection.py
app/qualification/: models.py  service.py
app/rag/: chunking.py  embeddings.py  ingest.py  retriever.py  types.py
data/knowledge_base/: faq.md  integrations.md  pricing.md  product_overview.md
docker/: Dockerfile  docker-compose.yml
docker/initdb/: 01-init.sh
evals/: metrics.py  report.py  run.py  suites.py
evals/datasets/: guardrails_injection.json  guardrails_pii.json  qualification.json  rag.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_knowledge_base.py  0003_lead_qualifications.py  0004_demo_bookings.py
scripts/: create_api_key.py  demo_conversation.py  seed_knowledge.py  verify_provider.py
tests/: conftest.py  fakes.py
tests/agent/: test_orchestrator.py  test_orchestrator_guardrails.py  test_orchestrator_rag.py
tests/db/: test_automation.py  test_conversations_api.py  test_guardrails_endpoint.py  test_ingest.py  test_message_endpoint.py  test_qualification.py  test_rate_limit.py  test_repositories.py
tests/evals/: test_metrics.py  test_suites.py
tests/guardrails/: test_pii.py  test_prompt_injection.py
tests/integration/: conftest.py  test_retriever_pg.py
tests/qualification/: test_service.py
tests/unit/: test_auth.py  test_chunking.py  test_config.py  test_docs.py  test_health.py  test_security.py
