[project]
name = "ai-sales-assistant"
version = "0.1.0"
description = "AI Sales Assistant — lead qualification, context analysis and service automation for SaaS B2B"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Evandro Henrique" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "openai>=1.55",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavier, optional PII engine. The regex-based detector works without it.
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade,
# S: bandit-style security, ASYNC: async pitfalls, SIM/C4/RUF: cleanups.
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert and hardcoded fixtures/tokens by design.
"tests/**" = ["S101", "S105", "S106"]
"migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["slowapi.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a running PostgreSQL/pgvector database",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
